CloudFormation-Day2/Ventura-Prod.yaml
---    
AWSTemplateFormatVersion: '2010-09-09'
Description: This template provisions the VenturaVPC Network Infrastructure
Metadata: {}
Parameters: {}
Mappings: {}
Conditions: {}
Resources:
  VenturaVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
      - Key: Name
        Value: VenturaVPC

  VenturaIgw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: VenturaIgw
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VenturaVPC
      InternetGatewayId: !Ref VenturaIgw
  
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref VenturaVPC
      CidrBlock: 10.0.1.0/28
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Ventura-Prod-NAT-ALB-Subnet-1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      VpcId: !Ref VenturaVPC
      CidrBlock: 10.0.3.0/28
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Ventura-Prod-ALB-Subnet-2

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref VenturaVPC
      CidrBlock: 10.0.5.0/23
      Tags:
        - Key: Name
          Value: Ventura-Prod-Web-Subnet-1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      VpcId: !Ref VenturaVPC
      CidrBlock: 10.0.10.0/23
      Tags:
        - Key: Name
          Value: Ventura-Prod-Web-Subnet-2

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref VenturaVPC
      CidrBlock: 10.0.15.0/23
      Tags:
        - Key: Name
          Value: Ventura-Prod-App-Subnet-1

  PrivateSubnet4:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      VpcId: !Ref VenturaVPC
      CidrBlock: 10.0.20.0/23
      Tags:
        - Key: Name
          Value: Ventura-Prod-App-Subnet-2

  PrivateSubnet5:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref VenturaVPC
      CidrBlock: 10.0.25.0/27
      Tags:
        - Key: Name
          Value: Ventura-Prod-DB-Subnet-1

  PrivateSubnet6:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      VpcId: !Ref VenturaVPC
      CidrBlock: 10.0.30.0/27
      Tags:
        - Key: Name
          Value: Ventura-Prod-DB-Subnet-2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaVPC
      Tags:
        - Key: Name
          Value: Ventura-PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VenturaIgw

  VenturaPubRouteTableAssoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  VenturaPublicRouteTableAssoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  NatGateway1:
    Type: AWS::EC2::NatGateway
    DependsOn: NatGateway1EIP
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: PrivateSubnet1
    Properties:
      Domain: vpc

  NatGateway2:
    Type: AWS::EC2::NatGateway
    DependsOn: NatGateway2EIP
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: PublicSubnet2
    Properties:
      Domain: vpc

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaVPC
      Tags:
        - Key: Name
          Value: Ventura-PrivateRouteTable1

  PrivateRoute1:
    Type: AWS::EC2::Route
    DependsOn: NatGateway1EIP
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VenturaVPC
      Tags:
        - Key: Name
          Value: Ventura-PrivateRouteTable2

  PrivateRoute2:
    Type: AWS::EC2::Route
    DependsOn: NatGateway2EIP
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateRouteTableAssoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateRouteTableAssoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

  PrivateRouteTableAssoc3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet3
      RouteTableId: !Ref PrivateRouteTable1

  PrivateRouteTableAssoc4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet4
      RouteTableId: !Ref PrivateRouteTable2

  PrivateRouteTableAssoc5:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet5
      RouteTableId: !Ref PrivateRouteTable1

  PrivateRouteTableAssoc6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet6
      RouteTableId: !Ref PrivateRouteTable2






  VenturaProdWebSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref VenturaProdNATalbSN1azPara
      VpcId: !Ref VenturaVPC
      CidrBlock: !Ref VenturaProdNATalbSN1CidrBlockPara
      Tags:
        - Key: Name
          Value: Ventura-Prod-Web-Subnet-3

  VenturaProdWebSubnet4:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref VenturaProdNATalbSN1azPara
      VpcId: !Ref VenturaVPC
      CidrBlock: !Ref VenturaProdNATalbSN1CidrBlockPara
      Tags:
        - Key: Name
          Value: Ventura-Prod-Web-Subnet-4

  VenturaProdWebSubnet5:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref VenturaProdNATalbSN1azPara
      VpcId: !Ref VenturaVPC
      CidrBlock: !Ref VenturaProdNATalbSN1CidrBlockPara
      Tags:
        - Key: Name
          Value: Ventura-Prod-Web-Subnet-5

  VenturaProdWebSubnet6:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref VenturaProdNATalbSN1azPara
      VpcId: !Ref VenturaVPC
      CidrBlock: !Ref VenturaProdNATalbSN1CidrBlockPara
      Tags:
        - Key: Name
          Value: Ventura-Prod-Web-Subnet-6



  VenturaProdAppSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref VenturaProdNATalbSN1azPara
      VpcId: !Ref VenturaVPC
      CidrBlock: !Ref VenturaProdNATalbSN1CidrBlockPara
      Tags:
        - Key: Name
          Value: Ventura-Prod-App-Subnet-3

  VenturaProdAppSubnet4:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref VenturaProdNATalbSN1azPara
      VpcId: !Ref VenturaVPC
      CidrBlock: !Ref VenturaProdNATalbSN1CidrBlockPara
      Tags:
        - Key: Name
          Value: Ventura-Prod-App-Subnet-4

  VenturaProdAppSubnet5:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref VenturaProdNATalbSN1azPara
      VpcId: !Ref VenturaVPC
      CidrBlock: !Ref VenturaProdNATalbSN1CidrBlockPara
      Tags:
        - Key: Name
          Value: Ventura-Prod-App-Subnet-5

  VenturaProdAppSubnet6:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref VenturaProdNATalbSN1azPara
      VpcId: !Ref VenturaVPC
      CidrBlock: !Ref VenturaProdNATalbSN1CidrBlockPara
      Tags:
        - Key: Name
          Value: Ventura-Prod-App-Subnet-6



  PrivateRouteTableAssoc3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdWebSubnet3
      RouteTableId: !Ref VenturaProdWebRouteTable1

  PrivateRouteTableAssoc4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdWebSubnet4
      RouteTableId: !Ref VenturaProdWebRouteTable2

  PrivateRouteTableAssoc5:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdWebSubnet5
      RouteTableId: !Ref VenturaProdWebRouteTable1

  PrivateRouteTableAssoc6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdWebSubnet6
      RouteTableId: !Ref VenturaProdWebRouteTable2




  PrivateRouteTableAssoc9:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdAppSubnet3
      RouteTableId: !Ref VenturaProdAppRouteTable1

  PrivateRouteTableAssoc10:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdAppSubnet4
      RouteTableId: !Ref VenturaProdAppRouteTable2

  PrivateRouteTableAssoc11:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdAppSubnet5
      RouteTableId: !Ref VenturaProdAppRouteTable1

  PrivateRouteTableAssoc12:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VenturaProdAppSubnet6
      RouteTableId: !Ref VenturaProdAppRouteTable2
  

Outputs: {}
